src/test/06-Errors/error-public-class-func.txt
error-public-class-func.ck:15:5: error: cannot call local function 'foo' from within a public class
[15]     foo();
         ^
